--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
@@ -229,7 +229,7 @@
         <div class="col-8">
             <div class="card shadow">
                 <div class="card-header d-flex justify-content-between align-items-center">
-                    <span>Dataset</span>
+                    <span><b>Dataset</b></span>
                     <select id="institutionFilter" class="form-control w-auto">
                         <option value="all">All Institution</option>
                         <!-- Dynamically add other institution -->
