--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -123,11 +123,11 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th scope="col" style="width: 30%;">Email</th>
-                                <th scope="col" style="width: 10%;">Level</th>
-                                <th scope="col" style="width: 10%;">Logins</th>
-                                <th scope="col" style="width: 30%;">Institution</th>
-                                <th scope="col" style="width: 30%;">Last Login</th>
+                                <th scope="col" style="width: 30%;"><b>Email</b></th>
+                                <th scope="col" style="width: 10%;"><b>Level</b></th>
+                                <th scope="col" style="width: 10%;"><b>Logins</b></th>
+                                <th scope="col" style="width: 30%;"><b>Institution</b></th>
+                                <th scope="col" style="width: 30%;"><b>Last Login</b></th>
                             </tr>
                         </thead>
                     </table>
@@ -251,7 +251,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="abbr">Abbr:</label>
+                                                <label for="abbr"><b>Abbr:</b></label>
                                                 <input type="text" class="form-control" name="abbr" id="abbr" value="">
                                             </div>
                                         </div>
@@ -260,7 +260,7 @@
                                     <div class="form-row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="type">Type:</label>
+                                                <label for="type"><b>Type:</b></label>
                                                 <select class="form-control" name="type" id="type">
                                                     <option value="Industry">Industry</option>
                                                     <option value="Academic">Academic</option>
@@ -271,7 +271,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="phone">Phone Number:</label>
+                                                <label for="phone"><b>Phone Number:</b></label>
                                                 <input type="text" class="form-control" name="phone" id="phone"
                                                     value="">
                                             </div>
@@ -281,14 +281,14 @@
                                     <div class="form-row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="email">Email:</label>
+                                                <label for="email"><b>Email:</b></label>
                                                 <input type="text" class="form-control" name="email" id="email"
                                                     value="">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="address">Address:</label>
+                                                <label for="address"><b>Address:</b></label>
                                                 <input type="text" class="form-control" name="address" id="address"
                                                     value="">
                                             </div>
@@ -298,14 +298,14 @@
                                     <div class="form-row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="website">Website:</label>
+                                                <label for="website"><b>Website:</b></label>
                                                 <input type="text" class="form-control" name="website" id="website"
                                                     value="">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="status">Status:</label>
+                                                <label for="status"><b>Status:</b></label>
                                                 <select class="form-control" name="status" id="status">
                                                     <option value="Active">Active</option>
                                                     <option value="Inactive">Inactive</option>
@@ -316,14 +316,14 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label>Orders:</label>
+                                        <label><b>Orders:</b></label>
                                         <div class="scrollable-orders">
                                             <table class="table">
                                                 <thead>
                                                     <tr>
-                                                        <th scope="col">PO Number</th>
-                                                        <th scope="col">Order Date</th>
-                                                        <th scope="col">Action</th>
+                                                        <th scope="col"><b>PO Number</b></th>
+                                                        <th scope="col"><b>Order Date</b></th>
+                                                        <th scope="col"><b>Action</b></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
